[references] Remove reference section from build section

--- a/doc/base/references.bib
+++ b/doc/base/references.bib
@@ -1681,6 +1681,11 @@ url = {http://www.ipgp.fr}
   Url                      = {https://www.seiscomp.de}
 }
 
+@Misc{seiscomp-github,
+  Title                    = {SeisComP on GitHub},
+  Url                      = {https://github.com/SeisComP}
+}
+
 @Misc{services,
   Title                    = {{Technology support and training for gempa module and SeisComP}},
   HowPublished             = {gempa services},
