[documentation] Update concepts: configuration

--- a/doc/base/references.bib
+++ b/doc/base/references.bib
@@ -1740,6 +1740,12 @@ url = {http://www.ipgp.fr}
   Url                      = {https://docs.gempa.de/smgui/current/index.html},
 }
 
+@Misc{smp,
+  Title                    = {{SMP}},
+  HowPublished             = {Station Management Portal by gempa GmbH},
+  Url                      = {https://smp.gempa.de/},
+}
+
 @Misc{sproc2caps,
   Title                    = {{sproc2caps}},
   HowPublished             = {gempa plugin},
