[scqueryqc] Change name from scquery_qc

--- a/doc/base/references.bib
+++ b/doc/base/references.bib
@@ -1570,10 +1570,10 @@ url = {http://www.ipgp.fr}
   Url                      = {https://docs.gempa.de/seiscomp/current/apps/scquery.html},
 }
 
-@Misc{scquery_qc,
-  Title                    = {{scquery}},
+@Misc{scqueryqc,
+  Title                    = {{scqueryqc}},
   HowPublished             = {SeisComP module},
-  Url                      = {https://docs.gempa.de/seiscomp/current/apps/scquery_qc.html},
+  Url                      = {https://docs.gempa.de/seiscomp/current/apps/scqueryqc.html},
 }
 
 @Misc{screloc,
