[documentation] Move references to references.bib

--- a/doc/base/references.bib
+++ b/doc/base/references.bib
@@ -750,6 +750,11 @@ doi = {10.1016/0031-9201(96)03141-X}
   Url                      = {https://activemq.apache.org/},
 }
 
+@Misc{agpl,
+  Title                    = {{Affero General Public License}},
+  HowPublished             = {GNU},
+  Url                      = {https://www.gnu.org/licenses/agpl-3.0.html},
+}
 
 @Misc{bindings2cfg,
   Title                    = {{bindings2cfg}},
@@ -829,6 +834,12 @@ doi = {10.1016/0031-9201(96)03141-X}
   Url                      = {https://docs.gempa.de/caps/current/base/plugins.html#plugins-provided-upon-request},
 }
 
+@Misc{eida,
+  Title                    = {{EIDA}},
+  HowPublished             = {European Integrated Data Archive, Orfeus},
+  Url                      = {https://www.orfeus-eu.org/data/eida/},
+}
+
 @Misc{email,
   Title                    = {{email}},
   HowPublished             = {SeisComP plugin},
@@ -869,6 +880,12 @@ doi = {10.1016/0031-9201(96)03141-X}
   Title                    = {{FDSNWS}},
   HowPublished             = {International Federation of Digital Seismograph Networks},
   Url                      = {http://www.fdsn.org/webservices/},
+}
+
+@Misc{fdsn-specs,
+  Title                    = {{FDSN Web Service Specifications}},
+  HowPublished             = {International Federation of Digital Seismograph Networks},
+  Url                      = {http://www.fdsn.org/webservices/FDSN-WS-Specifications-1.2.pdf},
 }
 
 @Misc{fdsn-datacenters,
@@ -937,10 +954,27 @@ doi = {10.1016/0031-9201(96)03141-X}
   Url                      = {https://www.gempa.de/},
 }
 
+@Misc{geofon,
+  Title                    = {{GEOFON}},
+  HowPublished             = {GFZ German Resarch Center for Geosciences},
+  Url                      = {https://geofon.gfz-potsdam.de/},
+}
+
+@Misc{gempa-download,
+  Title                    = {{Public download site of gempa}},
+  Url                      = {https://data.gempa.de/packages/Public/seiscomp/},
+}
+
 @Misc{gis,
   Title                    = {{GIS}},
   HowPublished             = {gempa Image Server},
   Url                      = {https://docs.gempa.de/gis/current/index.html},
+}
+
+@Misc{gitews,
+  Title                    = {{GITEWS}},
+  HowPublished             = {German-Indonesian Tsunami Early Warning System for the Indian Ocean},
+  Url                      = {https://www.gitews.org/en/homepage/},
 }
 
 @Misc{gnsthreat,
@@ -969,7 +1003,7 @@ doi = {10.1016/0031-9201(96)03141-X}
 
 @Misc{hann-window,
   Title                    = {{Hann window}},
-  HowPublished             = {Wikipdia},
+  HowPublished             = {Wikipedia},
   Url                      = {https://en.wikipedia.org/wiki/Hann_function},
 }
 
@@ -1236,6 +1270,12 @@ url = {http://www.ipgp.fr}
   Url                      = {https://docs.gempa.de/caps/current/apps/orb2caps.html#orb2caps}
 }
 
+@Misc{orfeus,
+  Title                    = {{Orfeus}},
+  HowPublished             = {Observatories & Research Facilities for European Seismology},
+  Url                      = {https://www.orfeus-eu.org/},
+}
+
 @Misc{ovsm,
   Title = {{OVSM, Interreg Caraibes}},
   Url = {https://www.interreg-caraibes.com}
@@ -1262,6 +1302,12 @@ url = {http://www.ipgp.fr}
   Title                    = {{pipeline}},
   HowPublished             = {SeisComP3 wiki},
   Url                      = {https://www.SeisComP3.org/wiki/recipes/multiple-pick-loc-pipeline},
+}
+
+@Misc{wppubsub,
+  Title                    = {{Publish–subscribe pattern}},
+  HowPublished             = {Wikipedia},
+  Url                      = {https://en.wikipedia.org/wiki/Publish%E2%80%93subscribe_pattern},
 }
 
 @Misc{qclog,
@@ -1673,6 +1719,12 @@ url = {http://www.ipgp.fr}
   Url                      = {https://docs.gempa.de/seiscomp/current/index.html},
 }
 
+@Misc{seiscomp-forum,
+  Title                    = {{SeisComP forum}},
+  HowPublished             = {GFZ},
+  Url                      = {https://forum.seiscomp.de/},
+}
+
 @Misc{seiscomp,
   Title                    = {{The SeisComP seismological software package. GFZ Data Services.}},
   Author                   = {{Helmholtz-Centre Potsdam - GFZ German Research Centre for Geosciences and gempa GmbH}},
@@ -1836,6 +1888,11 @@ url = {http://www.ipgp.fr}
   Url                      = {https://earthquake.usgs.gov/data/vs30},
 }
 
+@Misc{webdc3-documentation,
+  Title                    = {{WebDC3}},
+  HowPublished             = {Documentation},
+  Url                      = {https://webdc3.readthedocs.io/},
+}
 @Misc{win2caps,
   Title                    = {{win2caps}},
   HowPublished             = {gempa plugin},
