[documentation] Add references to list

--- a/doc/base/references.bib
+++ b/doc/base/references.bib
@@ -396,6 +396,17 @@ pages = {1105 – 1130},
 doi = {10.1785/BSSA0710041105}
 }
 
+@Article{jurkevic-1988,
+author = {A. Jurkevics},
+title = {Polarization analysis of three-component array data},
+journal = {Bull. Seismol. Soc. Am.},
+year = {1988},
+volume = {78},
+number = {5},
+pages = {1725-1743},
+doi = {10.1785/BSSA0710041105}
+}
+
 @Article{kanamori-2008,
 author = {H. Kanamori and L. Rivera},
 title = {Source inversion of Wphase: speeding up seismic tsunami warning},
