[references] Add bindi-2014

--- a/doc/base/references.bib
+++ b/doc/base/references.bib
@@ -51,6 +51,18 @@ pages = {363 – 373},
 doi = {10.1785/0220150235}
 }
 
+
+@Article{bindi-2014,
+author = {D. Bindi and M. Massa and L. Luzi and G. Ameri and F. Pacor and R. Puglia and P. Augliera},
+title = {Pan-European ground-motion prediction equations for the average horizontal component of PGA, PGV, and 5 %-damped PSA at spectral periods up to 3.0 s using the RESORCE dataset},
+journal = {Bull. Earthquake Eng.},
+year = {2014},
+volume = {12},
+number = {1},
+pages = {},
+doi = {10.1007/s10518-013-9525-5}
+}
+
 @Article{bindi-2015,
 author = {D. Bindi and B. Petrovic and S. Karapetrou and M. Manakou and T. Boxberger and D. Raptakis and K.D. Pitilakis and S. Parolai},
 title = {Seismic response of an 8-story RC-building from ambient vibration analysis},
