[doc] References, concepts, installation, ...

--- a/doc/base/references.bib
+++ b/doc/base/references.bib
@@ -387,7 +387,7 @@ year = {1987},
 volume = {77},
 number = {6},
 pages = {2074–2094},
-doi = {10.5194/nhess-10-2611-2010}
+url = {https://resolver.caltech.edu/CaltechAUTHORS:20140905-113510505}
 }
 
 @Article{iaspei-2013,
@@ -537,6 +537,34 @@ pages = {640 – 656},
 doi = {10.1785/0120090198},
 }
 
+@InProceedings{murphy-1981,
+  author                   = {J.R. Murphy},
+  title                    = {{P Wave Coupling of Underground Explosions in Various Geologic Media.}},
+  Booktitle                = {{Identification of Seismic Sources — Earthquake or Underground Explosion. NATO Advanced Study Institutes Series (Series C — Mathematical and Physical Sciences)}},
+  Publisher                = {Springer},
+  Editor                   = {E.S. Husebye and S. Mykkeltveit},
+  Address                  = {Dordrecht},
+  year                     = {1981},
+  volume                   = {74},
+}
+
+
+@InCollection{Crow2005,
+  Title                    = {Map: Simplified geological map of {S}umatra},
+  Author                   = {M. J. Crow and A. J. Barber},
+  Publisher                = {Geological Society, London, Memoirs },
+  Year                     = {2005},
+  Number                   = {1},
+  Pages                    = {NP-b},
+  Volume                   = {31},
+
+  Category                 = {geology},
+  File                     = {:/home/dirk/LITERATUR/crow-map-2005.pdf:PDF},
+  Keywords                 = {geology, Sunda, SE Asia},
+  Language                 = {english},
+  Optaddress               = {http://mem.lyellcollection.org/cgi/reprint/31/1/NP-a.pdf}
+}
+
 @Article{nuttli-1973,
 author = {O.W. Nuttli},
 title = {Seismic wave attenuation and magnitude relations for eastern North America},
@@ -585,7 +613,19 @@ journal = {Bull. Seismol. Soc. Am.},
 year = {1935},
 volume = {1},
 pages = {1 - 32},
+url = {https://resolver.caltech.edu/CaltechAUTHORS:20140804-143558638},
 doi = {10.1785/BSSA0250010001}
+}
+
+@Article{ringdal-1992,
+author = {F. Ringdal and P. D. Marshall and R. W. Alewine},
+title = {{Seismic yield determinationof Soviet underground nuclear explosions at the Shagan River test site}},
+journal = {Geophys. J. Int.},
+year = {1992},
+volume = {109},
+number = {1},
+pages = {65–77},
+doi = {10.1111/j.1365-246X.1992.tb00079.x}
 }
 
 @Article{ristau-2016,
@@ -728,6 +768,28 @@ year = {2015},
 volume = {6},
 number = {6},
 doi = {10.4172/2157-7463.1000254}
+}
+
+@Article{uhrhammer-1990,
+author = {R.A. Uhrhammer and E.R. Collins},
+title = {{Synthesis of Wood-Anderson seismograms from broadband digital records}},
+journal = {Bull. Seismol. Soc. Am.},
+year = {1990},
+volume = {80},
+number = {3},
+pages = {702–716},
+doi = {10.1785/BSSA0800030702}
+}
+
+@Article{wald-1999,
+author = {D.J. Wald and V. Quitoriano and T.H. Heaton and H. Kanamori},
+title = {{Relationships between Peak Ground Acceleration, Peak Ground Velocity, and Modified Mercalli Intensity in California}},
+journal = {Earthquake Spectra},
+year = {1999},
+volume = {15},
+number = {3},
+pages = {557-564},
+doi = {10.1193/1.1586058}
 }
 
 @Article{weber-2019,
@@ -1019,8 +1081,8 @@ doi = {10.1016/0031-9201(96)03141-X}
 }
 
 @Misc{gui,
-  Title                    = {{GUI}},
-  HowPublished             = {SeisComP features: graphical user interfaces},
+  Title                    = {{GUI features and parameters}},
+  HowPublished             = {SeisComP extensions documentation},
   Url                      = {https://docs.gempa.de/seiscomp/current/apps/global_gui.html},
 }
 
@@ -1300,13 +1362,25 @@ url = {http://www.ipgp.fr}
 }
 
 @Misc{ovsm,
-  Title = {{OVSM, Interreg Caraibes}},
-  Url = {https://www.interreg-caraibes.com}
+  Title                    = {{OVSM, Interreg Caraibes}},
+  Url                      = {https://www.interreg-caraibes.com}
 }
 
 @Misc{osm,
-  Title = {{OpenStreetMap}},
-  Url = {http://www.openstreetmap.org}
+  Title                    = {{OpenStreetMap}},
+  Url                      = {http://www.openstreetmap.org}
+}
+
+@Misc{osm-servers,
+  Title                    = {{Tile servers}},
+  HowPublished             = {{OpenStreetMap}},
+  Url                      = {https://wiki.openstreetmap.org/wiki/Tile_servers}
+}
+
+@Misc{pcc,
+  Title                    = {{Pearson correlation coefficient}},
+  HowPublished             = {Wikipedia},
+  Url                      = {https://en.wikipedia.org/wiki/Pearson_correlation_coefficient}
 }
 
 @Misc{playback_picks,
@@ -1361,6 +1435,12 @@ url = {http://www.ipgp.fr}
   Title                    = {{qlpush}},
   HowPublished             = {gempa module},
   Url                      = {https://docs.gempa.de/quakelink/current/apps/qlpush.html},
+}
+
+@Misc{qt-painter,
+  Title                    = {{QT painter documentation}},
+  HowPublished             = {Qt GUI 5.12.12},
+  Url                      = {https://doc.qt.io/archives/qt-5.12/qpainter.html#CompositionMode-enum},
 }
 
 @Misc{quakelink,
@@ -1865,7 +1945,7 @@ url = {http://www.ipgp.fr}
 
 @Misc{tiles,
   Title                    = {{Tiles}},
-  HowPublished             = {Wikipedia},
+  HowPublished             = {{OpenStreetMap}},
   Url                      = {http://wiki.openstreetmap.org/wiki/Tiles},
 }
 
