[references] Add taup

--- a/doc/base/references.bib
+++ b/doc/base/references.bib
@@ -1925,6 +1925,12 @@ url = {http://www.ipgp.fr}
   Url                      = {https://docs.gempa.de/seiscomp/current/apps/tabinvmodifier.html},
 }
 
+@Misc{taup,
+  Title                    = {{TauP}},
+  HowPublished             = {Toolkit for seismic travel times},
+  Url                      = {https://www.seis.sc.edu/taup/},
+}
+
 @Misc{test2caps,
   Title                    = {{test2caps}},
   HowPublished             = {gempa plugin},
