[documentation] Udjust upgrade tutorial

--- a/doc/base/references.bib
+++ b/doc/base/references.bib
@@ -1075,9 +1075,9 @@ doi = {10.1016/0031-9201(96)03141-X}
 }
 
 @Misc{gsm,
-  Title                    = {{gsm}},
+  Title                    = {{gsm - gempa software management tool}},
   HowPublished             = {gempa solution},
-  Url                      = {https://docs.gempa.de/gsm/},
+  Url                      = {https://data.gempa.de/packages/Public/gsm/},
 }
 
 @Misc{gui,
