[documentation] Add section on compilation for MacOS

--- a/doc/base/references.bib
+++ b/doc/base/references.bib
@@ -1205,6 +1205,12 @@ url = {http://www.ipgp.fr}
   Url                      = {https://lxml.de/},
 }
 
+@Misc{macos-compile,
+  Title                    = {{Installing SeisComP on MacOS}},
+  HowPublished             = {Gilles' sysadmin & dev blog for Earth Science},
+  Url                      = {https://gilles.ecgs.lu/seiscomp-for-mac-compilation-instructions/},
+}
+
 @Misc{mapprojections,
   Title                    = {{mapprojections}},
   HowPublished             = {gempa map plugin},
