[references] Add and update

--- a/doc/base/references.bib
+++ b/doc/base/references.bib
@@ -691,6 +691,17 @@ pages = {2 - 1},
 doi = {10.1029/2000RG000100}
 }
 
+@Article{rhoades-2020,
+author = {D.A. Rhoades and A. Christophersen and S. Bourguignon and J. Ristau and J. Salichon},
+title = {{A Depth‐Dependent Local Magnitude Scale for New Zealand Earthquakes Consistent with Moment Magnitude}},
+journal = {Bull. Seismol. Soc. Am.},
+year = {2020},
+volume = {111},
+number = {2},
+pages = {1056–1066},
+doi = {10.1785/0120200252}
+}
+
 @Article{sambridge-1999,
 author = {M. Sambridge},
 title = {{Geophysical inversion with a neighbourhood algorithm. I. Searching the parameter space}},
@@ -779,6 +790,16 @@ volume = {80},
 number = {3},
 pages = {702–716},
 doi = {10.1785/BSSA0800030702}
+}
+
+@Article{valtonen-2013,
+author = { O. Valtonen and M. Uski and A. Korja and T. Tiira, and J. Kortstr\"om},
+title = {{Optimal configuration of a micro-earthquake network }},
+journal = {Advances in Geosciences},
+year = {2013},
+volume = {34},
+pages = {33 - 36},
+doi = {10.5194/adgeo-34-33-2013}
 }
 
 @Article{wald-1999,
@@ -1919,6 +1940,12 @@ url = {http://www.ipgp.fr}
   Url                      = {https://pypi.org/project/stompy/},
 }
 
+@Misc{swarm,
+  Title                    = {{SWARM}},
+  HowPublished             = {USGS},
+  Url                      = {https://volcanoes.usgs.gov/software/swarm/},
+}
+
 @Misc{tab2inv,
   Title                    = {{tab2inv}},
   HowPublished             = {SeisComP module},
@@ -1973,6 +2000,12 @@ url = {http://www.ipgp.fr}
   Url                      = {https://geofon.gfz-potsdam.de/_uml_new/},
 }
 
+@Misc{unavco,
+  Title                    = {{Unavco - Strain & Seismic}},
+  HowPublished             = {EarthScope Consortium},
+  Url                      = {https://www.unavco.org/data/strain-seismic/strain-seismic.html},
+}
+
 @Misc{v4l2caps,
   Title                    = {{v4l2caps}},
   HowPublished             = {gempa plugin},
@@ -2008,10 +2041,17 @@ url = {http://www.ipgp.fr}
   HowPublished             = {Documentation},
   Url                      = {https://webdc3.readthedocs.io/},
 }
+
 @Misc{win2caps,
   Title                    = {{win2caps}},
   HowPublished             = {gempa plugin},
   Url                      = {https://docs.gempa.de/caps/current/apps/win2caps.html#win2caps},
+}
+
+@Misc{wws,
+  Title                    = {{Winston Wave Server}},
+  HowPublished             = {USGS},
+  Url                      = {https://github.com/usgs/winston/blob/master/src/main/resources/docs/WWS.md},
 }
 
 @Misc{yet2caps,
