[concepts] Describe methods for computing station magnitudes

--- a/doc/base/references.bib
+++ b/doc/base/references.bib
@@ -681,6 +681,18 @@ year = {2018},
 doi = {10.1029/2000RG000100}
 }
 
+@InCollection{rosenberger-1983,
+  Title                    = {Comparing location estimators: Trimmed means,
+  medians, and trimean},
+  Author                   = {J.L. Rosenberger and M. Gasko},
+  booktitle                = {Understanding Robust and Exploratory Data Analysis},
+  Publisher                = {Wiley},
+  address                  = {New York, NY},
+  Year                     = {1983},
+  Pages                    = {297-336},
+  editor                   = {D.C. Hoaglin and F. Mosteller and J.W. Tukey}
+}
+
 @Article{rost-2002,
 author = {S. Rost and C. Thomas},
 title = {Array seismology: methods and applications},
