[documentation] Update style guide

--- a/doc/base/references.bib
+++ b/doc/base/references.bib
@@ -1214,6 +1214,14 @@ url = {http://www.ipgp.fr}
   Url                      = {https://docs.gempa.de/lambda/current/index.html},
 }
 
+
+@Misc{libmseed-github,
+  Title                    = {{libmseed - The miniSEED data format library}},
+  Year                     = {2017},
+  HowPublished             = {GitHub},
+  Url                      = {https://github.com/EarthScope/libmseed/wiki}
+}
+
 @Misc{libslink,
   Title                    = {{Libslink}},
   HowPublished             = {SeedLink client library written in C},
