[time string] Add to documentation

--- a/doc/base/references.bib
+++ b/doc/base/references.bib
@@ -1131,6 +1131,12 @@ doi = {10.1016/0031-9201(96)03141-X}
   Url                      = {https://docs.gempa.de/seiscomp/current/apps/global_hypo71.html},
 }
 
+@Misc{iso_8601,
+  Title                    = {{ISO 8601}},
+  HowPublished             = {Wikepedia},
+  Url                      = {https://en.wikipedia.org/wiki/ISO_8601},
+}
+
 @Misc{iloc,
   Title                    = {{iLoc}},
   HowPublished             = {SeisComP plugin},
