[documentation] Add luckett2019 to references

--- a/doc/base/references.bib
+++ b/doc/base/references.bib
@@ -517,6 +517,16 @@ doi  = {10.3133/ofr75311 }
   url       = {https://publishup.uni-potsdam.de/frontdoor/index/index/docId/40199},
 }
 
+@Article{luckett2019,
+  author   = {R. Luckett and L. Ottem\"oller and A. Butcher and B. Baptie},
+  title    = {Extending local magnitude ML to short distances},
+  journal  = {Geophys. J. Int.},
+  year     = {2019},
+  volume   = {216},
+  pages    = {1145–1156},
+  doi      = {10.1093/gji/ggy484},
+}
+
 @Article{minson-2008,
 author = {S.E. Minson and D.S. Dreger},
 title = {Stable inversions for complete moment tensors},
