[documentation] Update references

--- a/doc/base/references.bib
+++ b/doc/base/references.bib
@@ -21,6 +21,71 @@ pages = {359 - 387},
 doi = {}
 }
 
+@Article{allen-2012,
+  author  = {Allen, TI},
+  title   = {Stochastic ground-motion prediction equations for southeastern Australian earthquakes using updated source and attenuation parameters},
+  journal = {Geoscience Australia Record},
+  year    = {2012},
+  volume  = {69},
+  pages   = {55},
+  url     = {https://ecat.ga.gov.au/geonetwork/srv/eng/catalog.search#/metadata/74133},
+}
+
+@Article{allen-2022,
+  author    = {Allen, Trevor I},
+  title     = {A Far-Field Ground-Motion Model for the North Australian Craton from Plate-Margin Earthquakes},
+  journal   = {Bulletin of the Seismological Society of America},
+  year      = {2022},
+  volume    = {112},
+  number    = {2},
+  pages     = {1041--1059},
+  publisher = {GeoScienceWorld},
+}
+
+@Article{atkinson-2006,
+  author    = {Atkinson, Gail M and Boore, David M},
+  title     = {Earthquake ground-motion prediction equations for eastern North America},
+  journal   = {Bulletin of the seismological society of America},
+  year      = {2006},
+  volume    = {96},
+  number    = {6},
+  pages     = {2181--2205},
+  publisher = {GeoScienceWorld},
+}
+
+@Article{atkinson-2010,
+  author    = {Atkinson, Gail M},
+  title     = {Ground-motion prediction equations for Hawaii from a referenced empirical approach},
+  journal   = {Bulletin of the Seismological Society of America},
+  year      = {2010},
+  volume    = {100},
+  number    = {2},
+  pages     = {751--761},
+  publisher = {Seismological Society of America},
+}
+
+@Article{atkinson-2011,
+  author    = {Atkinson, Gail M and Boore, David M},
+  title     = {Modifications to existing ground-motion prediction equations in light of new data},
+  journal   = {Bulletin of the Seismological Society of America},
+  year      = {2011},
+  volume    = {101},
+  number    = {3},
+  pages     = {1121--1135},
+  publisher = {Seismological Society of America},
+}
+
+@Article{atkinson-2015,
+  author    = {Atkinson, Gail M},
+  title     = {Ground-motion prediction equation for small-to-moderate events at short hypocentral distances, with application to induced-seismicity hazards},
+  journal   = {Bulletin of the Seismological Society of America},
+  year      = {2015},
+  volume    = {105},
+  number    = {2A},
+  pages     = {981--992},
+  publisher = {Seismological Society of America},
+}
+
 @Article{behr-2012,
 author = {Y. Behr and G. Cua and J. Clinton and T. Heaton},
 title = {Evaluation of Real-Time Performance of the Virtual Seismologist Earthquake Early Warning Algorithm in Switzerland and California},
@@ -71,6 +136,16 @@ year = {2015},
 volume = {},
 pages = {},
 doi = {10.1007/s10518-014-9713-y}
+}
+
+@Article{bindi-2017,
+  author    = {Bindi, Dino and Cotton, Fabrice and Kotha, SR and Bosse, Christian and Stromeyer, D and Gr{\"u}nthal, G},
+  title     = {Application-driven ground motion prediction equation for seismic hazard assessments in non-cratonic moderate-seismicity areas},
+  journal   = {Journal of Seismology},
+  year      = {2017},
+  volume    = {21},
+  pages     = {1201--1218},
+  publisher = {Springer},
 }
 
 @Article{bolton-2006,
@@ -153,6 +228,39 @@ pages = {2284 – 2293},
 doi = {10.1785/0220180143},
 }
 
+@Article{boore-2008,
+  author    = {Boore, David M and Atkinson, Gail M},
+  title     = {Ground-motion prediction equations for the average horizontal component of PGA, PGV, and 5\%-damped PSA at spectral periods between 0.01 s and 10.0 s},
+  journal   = {Earthquake spectra},
+  year      = {2008},
+  volume    = {24},
+  number    = {1},
+  pages     = {99--138},
+  publisher = {SAGE Publications Sage UK: London, England},
+}
+
+@Article{boore-2014,
+  author    = {Boore, David M and Stewart, Jonathan P and Seyhan, Emel and Atkinson, Gail M},
+  title     = {NGA-West2 equations for predicting PGA, PGV, and 5\% damped PSA for shallow crustal earthquakes},
+  journal   = {Earthquake Spectra},
+  year      = {2014},
+  volume    = {30},
+  number    = {3},
+  pages     = {1057--1085},
+  publisher = {SAGE Publications Sage UK: London, England},
+}
+
+@Article{boore-2021,
+  author    = {Boore, David M and Stewart, Jonathan P and Skarlatoudis, Andreas A and Seyhan, Emel and Margaris, Basil and Theodoulidis, Nikos and Scordilis, Emmanuel and Kalogeras, Ioannis and Klimis, Nikolaos and Melis, Nikolaos S},
+  title     = {A ground-motion prediction model for shallow crustal earthquakes in Greece},
+  journal   = {Bulletin of the Seismological Society of America},
+  year      = {2021},
+  volume    = {111},
+  number    = {2},
+  pages     = {857--874},
+  publisher = {GeoScienceWorld},
+}
+
 @Article{bormann-2005,
 author = {P. Bormann and K. Wylegalla},
 title = {Quick estimator of the size of great earthquakes},
@@ -184,6 +292,16 @@ pages = {808 - 816},
 doi = {10.1785/gssrl.80.5.808}
 }
 
+@Article{bowers-2001,
+  author   = {D. Bowers and P.D. Marshall and A. Douglas},
+  title    = {{The level of deterrence provided by data from the SPITS seismometer array to possible violations of the Comprehensive Test Ban in the Novaya Zemlya region}},
+  journal  = {Geophys. J. Int.},
+  year     = {2001},
+  volume   = {146},
+  number   = {2},
+  pages    = {425-438},
+  doi      = {10.1046/j.1365-246x.2001.01462.x},
+}
 @Article{bratt-1988,
 author = {S.R. Bratt and T.C. Bache},
 title = {Locating events with a sparse network of regional arrays},
@@ -258,6 +376,27 @@ pages = {1587–1612},
 doi = {10.1007/s10518-014-9685-y}
 }
 
+@Article{convertito-2012,
+  author    = {Convertito, Vincenzo and Maercklin, Nils and Sharma, Nitin and Zollo, Aldo},
+  title     = {From induced seismicity to direct time-dependent seismic hazard},
+  journal   = {Bulletin of the Seismological Society of America},
+  year      = {2012},
+  volume    = {102},
+  number    = {6},
+  pages     = {2563--2573},
+  publisher = {Seismological Society of America},
+}
+
+@InCollection{Crow2005,
+  Title                    = {Map: Simplified geological map of {S}umatra},
+  Author                   = {M. J. Crow and A. J. Barber},
+  Publisher                = {Geological Society, London, Memoirs },
+  Year                     = {2005},
+  Number                   = {1},
+  Pages                    = {NP-b},
+  Volume                   = {31},
+}
+
 @Article{cua-2005,
 author = {G. Cua},
 title = {{Creating the Virtual Seismologist: developments in ground motion characterization and seismic early warning}},
@@ -295,6 +434,17 @@ year = {2004},
 volume = {45},
 pages = {153 - 168},
 doi = {}
+}
+
+@Article{derras-2014,
+  author    = {Derras, Boum{\'e}di{\`e}ne and Bard, Pierre Yves and Cotton, Fabrice},
+  title     = {Towards fully data driven ground-motion prediction models for Europe},
+  journal   = {Bulletin of Earthquake Engineering},
+  year      = {2014},
+  volume    = {12},
+  number    = {1},
+  pages     = {495--516},
+  publisher = {Springer},
 }
 
 @Article{dietz-2002,
@@ -419,6 +569,17 @@ pages = {1725-1743},
 doi = {10.1785/BSSA0710041105}
 }
 
+@Article{kale-2015,
+  author    = {Kale, {\"O}zkan and Akkar, Sinan and Ansari, Anooshiravan and Hamzehloo, Hossein},
+  title     = {A ground-motion predictive model for Iran and Turkey for horizontal PGA, PGV, and 5\% damped response spectrum: Investigation of possible regional effects},
+  journal   = {Bulletin of the Seismological Society of America},
+  year      = {2015},
+  volume    = {105},
+  number    = {2A},
+  pages     = {963--980},
+  publisher = {Seismological Society of America},
+}
+
 @Article{kanamori-2008,
 author = {H. Kanamori and L. Rivera},
 title = {Source inversion of Wphase: speeding up seismic tsunami warning},
@@ -481,6 +642,17 @@ pages = {4957 - 4963},
 doi = {10.1029/JB075i026p04957},
 }
 
+@Article{kotha-2020,
+  author    = {Kotha, Sreeram Reddy and Weatherill, Graeme and Bindi, Dino and Cotton, Fabrice},
+  title     = {A regionally-adaptable ground-motion model for shallow crustal earthquakes in Europe},
+  journal   = {Bulletin of Earthquake Engineering},
+  year      = {2020},
+  volume    = {18},
+  number    = {9},
+  pages     = {4091--4125},
+  publisher = {Springer},
+}
+
 @Article{kowsari-2020,
 author = {M. Kowsari and T. Sonnemann and B. Halldorsson and B. Hrafnkelsson and J. Snæbjornsson and S. Jonsson},
 title = {Bayesian inference of empirical ground motion models to pseudo-spectral accelerations of south Iceland seismic zone earthquakes based on informative priors},
@@ -490,6 +662,17 @@ volume = {13},
 pages = {},
 doi = {10.1016/j.soildyn.2020.106075},
 url = {}
+}
+
+@article{lanzano-2020,
+  title={A ground motion model for volcanic areas in Italy},
+  author={Lanzano, Giovanni and Luzi, Lucia},
+  journal={Bulletin of earthquake engineering},
+  volume={18},
+  number={1},
+  pages={57--76},
+  year={2020},
+  publisher={Springer}
 }
 
 @Article{lebras-2002,
@@ -567,12 +750,16 @@ doi = {10.1785/0120090198},
   Number                   = {1},
   Pages                    = {NP-b},
   Volume                   = {31},
+}
 
-  Category                 = {geology},
-  File                     = {:/home/dirk/LITERATUR/crow-map-2005.pdf:PDF},
-  Keywords                 = {geology, Sunda, SE Asia},
-  Language                 = {english},
-  Optaddress               = {http://mem.lyellcollection.org/cgi/reprint/31/1/NP-a.pdf}
+@Article{nath-2012,
+  author    = {Nath, Sankar Kumar and Thingbaijam, Kiran Kumar Singh and Maiti, Soumya Kanti and Nayak, Avinash},
+  title     = {Ground-motion predictions in Shillong region, northeast India},
+  journal   = {Journal of Seismology},
+  year      = {2012},
+  volume    = {16},
+  pages     = {475--488},
+  publisher = {Springer},
 }
 
 @Article{nuttli-1973,
@@ -616,6 +803,16 @@ doi = {},
 url = {https://www.vedur.is/media/vedurstofan/utgafa/skyrslur/2009/VI_2009_012.pdf}
 }
 
+@Article{raghukanth-2007,
+  author    = {Raghu Kanth, STG and Iyengar, RN},
+  title     = {Estimation of seismic spectral acceleration in peninsular India},
+  journal   = {Journal of Earth System Science},
+  year      = {2007},
+  volume    = {116},
+  pages     = {199--214},
+  publisher = {Springer},
+}
+
 @Article{richter-1935,
 author = {C.F. Richter},
 title = {An instrumental earthquake magnitude scale},
@@ -625,6 +822,24 @@ volume = {1},
 pages = {1 - 32},
 url = {https://resolver.caltech.edu/CaltechAUTHORS:20140804-143558638},
 doi = {10.1785/BSSA0250010001}
+}
+
+@Article{rietbrock-2013,
+  author    = {Rietbrock, Andreas and Strasser, Fleur and Edwards, Benjamin},
+  title     = {A stochastic earthquake ground-motion prediction model for the United Kingdom},
+  journal   = {Bulletin of the Seismological Society of America},
+  year      = {2013},
+  volume    = {103},
+  number    = {1},
+  pages     = {57--77},
+  publisher = {Seismological Society of America},
+}
+
+@Article{edwards-2019,
+  author  = {Edwards, B},
+  title   = {Update of the UK stochastic ground motion model using a decade of broadband data},
+  journal = {https://www. seced. org. uk/index. php/proceedings},
+  year    = {2019},
 }
 
 @Article{ringdal-1992,
@@ -762,6 +977,17 @@ pages = {1 - 80},
 doi = {10.2312/GFZ.NMSOP-2_ch9}
 }
 
+@Article{sharma-2009,
+  author    = {Sharma, Mukat Lal and Douglas, John and Bungum, Hilmar and Kotadia, Jainish},
+  title     = {Ground-motion prediction equations based on data from the Himalayan and Zagros regions},
+  journal   = {Journal of Earthquake Engineering},
+  year      = {2009},
+  volume    = {13},
+  number    = {8},
+  pages     = {1191--1210},
+  publisher = {Taylor \& Francis},
+}
+
 @Article{silver-1982,
 author = {G.P. Silver and T.H. Jordan},
 title = {Optimal estimation of the scalar seismic moment},
@@ -801,6 +1027,16 @@ year = {2015},
 volume = {6},
 number = {6},
 doi = {10.4172/2157-7463.1000254}
+}
+
+@Article{tusa-2016,
+  author    = {Tusa, Giuseppina and Langer, Horst},
+  title     = {Prediction of ground motion parameters for the volcanic area of Mount Etna},
+  journal   = {Journal of Seismology},
+  year      = {2016},
+  volume    = {20},
+  pages     = {1--42},
+  publisher = {Springer},
 }
 
 @Article{uhrhammer-1990,
@@ -861,6 +1097,28 @@ year = {1996},
 volume = {96},
 pages = {223 - 297},
 doi = {10.1016/0031-9201(96)03141-X}
+}
+
+@Article{zalachoris-2019,
+  author    = {Zalachoris, Georgios and Rathje, Ellen M},
+  title     = {Ground motion model for small-to-moderate earthquakes in Texas, Oklahoma, and Kansas},
+  journal   = {Earthquake Spectra},
+  year      = {2019},
+  volume    = {35},
+  number    = {1},
+  pages     = {1--20},
+  publisher = {GeoScienceWorld},
+}
+
+@Article{zhao-2006,
+  author    = {Zhao, John X and Zhang, Jian and Asano, Akihiro and Ohno, Yuki and Oouchi, Taishi and Takahashi, Toshimasa and Ogawa, Hiroshi and Irikura, Kojiro and Thio, Hong K and Somerville, Paul G and others},
+  title     = {Attenuation relations of strong ground motion in Japan using site classification based on predominant period},
+  journal   = {Bulletin of the Seismological Society of America},
+  year      = {2006},
+  volume    = {96},
+  number    = {3},
+  pages     = {898--913},
+  publisher = {Seismological Society of America},
 }
 
 #############################
@@ -1403,8 +1661,7 @@ url = {http://www.ipgp.fr}
 @Misc{openquake-models,
   Title                    = {{OpenQuake hazard library}},
   HowPublished             = {hazardlib documentation},
-  Url                      = {https://docs.openquake.org/oq-hazardlib/0.12/gsim/index.html}
-}
+  Url                      = {https://docs.openquake.org/oq-engine/latest/manual/},
 
 @Misc{openquake-github,
   Title                    = {{OpenQuake source code}},
