[references] Add grigoli-2024

--- a/doc/base/references.bib
+++ b/doc/base/references.bib
@@ -497,6 +497,18 @@ pages = {157 - 185},
 doi = {10.1029/RG003i001p00157}
 }
 
+@Article{grigoli-2014,
+author = {Grigoli, F. and Cesca, S. and Amoroso, O. and Emolo, A. and Zollo, A. and Dahm, T.},
+title = {{Automated seismic event location by waveform coherence analysis}},
+journal = {Geophys. J. Int.},
+year = {2014},
+volume = {196},
+number = {3},
+pages = {1742 - 1753},
+url = {https://doi.org/10.1093/gji/ggt477},
+doi = {10.1093/gji/ggt477}
+}
+
 @Article{gutenberg-1956,
 author = {B. Gutenberg and C.F. Richter},
 title = {{Magnitude and Energy of Earthquakes}},
