[documentation] Update style guide

--- a/doc/base/references.bib
+++ b/doc/base/references.bib
@@ -1733,6 +1733,12 @@ url = {http://www.ipgp.fr}
   Url                      = {https://www.SeisComP3.org/wiki/recipes/multiple-pick-loc-pipeline},
 }
 
+@Misc{python-doc,
+  Title                    = {{Python documentation}},
+  HowPublished             = {Python},
+  Url                      = {https://docs.python.org/},
+}
+
 @Misc{wppubsub,
   Title                    = {{Publish–subscribe pattern}},
   HowPublished             = {Wikipedia},
@@ -1791,6 +1797,24 @@ url = {http://www.ipgp.fr}
   Title                    = {{RegionCheck}},
   HowPublished             = {SeisComP plugin},
   Url                      = {https://docs.gempa.de/seiscomp/current/apps/scevent_regioncheck.html},
+}
+
+@Misc{reStructuredText,
+  Title                    = {{reStructuredText}},
+  HowPublished             = {Source Forge},
+  Url                      = {https://docutils.sourceforge.io/rst.html},
+}
+
+@Misc{reStructuredText-sphinx,
+  Title                    = {{reStructuredText - Introduction}},
+  HowPublished             = {Sphinx documentation},
+  Url                      = {https://www.sphinx-doc.org/en/master/usage/restructuredtext/index.html},
+}
+
+@Misc{reStructuredText-directives,
+  Title                    = {{reStructuredText - Directives}},
+  HowPublished             = {Sphinx documentation},
+  Url                      = {https://www.sphinx-doc.org/en/master/usage/restructuredtext/directives.html},
 }
 
 @Misc{router,
@@ -2231,6 +2255,12 @@ url = {http://www.ipgp.fr}
   Title                    = {{SMP}},
   HowPublished             = {Station Management Portal by gempa GmbH},
   Url                      = {https://smp.gempa.de/},
+}
+
+@Misc{sphinx,
+  Title                    = {{Sphinx}},
+  HowPublished             = {online},
+  Url                      = {https://www.sphinx-doc.org},
 }
 
 @Misc{sproc2caps,
