[documentation] Fix references

--- a/doc/base/references.bib
+++ b/doc/base/references.bib
@@ -377,7 +377,7 @@ doi = {10.1007/s10518-014-9685-y}
 }
 
 @Article{convertito-2012,
-  author    = {Convertito, Vincenzo and Maercklin, Nils and Sharma, Nitin and Zollo, Aldo},
+  author    = {V. Convertito and N. Maercklin and N. Sharma and A. Zollo},
   title     = {From induced seismicity to direct time-dependent seismic hazard},
   journal   = {Bulletin of the Seismological Society of America},
   year      = {2012},
@@ -388,13 +388,13 @@ doi = {10.1007/s10518-014-9685-y}
 }
 
 @InCollection{Crow2005,
-  Title                    = {Map: Simplified geological map of {S}umatra},
-  Author                   = {M. J. Crow and A. J. Barber},
-  Publisher                = {Geological Society, London, Memoirs },
-  Year                     = {2005},
-  Number                   = {1},
-  Pages                    = {NP-b},
-  Volume                   = {31},
+  Title     = {Map: Simplified geological map of {S}umatra},
+  Author    = {M. J. Crow and A. J. Barber},
+  Publisher = {Geological Society, London, Memoirs},
+  Year      = {2005},
+  Number    = {1},
+  Pages     = {NP-b},
+  Volume    = {31},
 }
 
 @Article{cua-2005,
@@ -751,17 +751,6 @@ doi = {10.1785/0120090198},
   Address                  = {Dordrecht},
   year                     = {1981},
   volume                   = {74},
-}
-
-
-@InCollection{Crow2005,
-  Title                    = {Map: Simplified geological map of {S}umatra},
-  Author                   = {M. J. Crow and A. J. Barber},
-  Publisher                = {Geological Society, London, Memoirs },
-  Year                     = {2005},
-  Number                   = {1},
-  Pages                    = {NP-b},
-  Volume                   = {31},
 }
 
 @Article{nath-2012,
@@ -1674,6 +1663,7 @@ url = {http://www.ipgp.fr}
   Title                    = {{OpenQuake hazard library}},
   HowPublished             = {hazardlib documentation},
   Url                      = {https://docs.openquake.org/oq-engine/latest/manual/},
+}
 
 @Misc{openquake-github,
   Title                    = {{OpenQuake source code}},
