[documentation] Update for better iLoc support

--- a/doc/base/references.bib
+++ b/doc/base/references.bib
@@ -1460,6 +1460,12 @@ doi = {10.1016/0031-9201(96)03141-X}
   Url                      = {https://seiscode.iris.washington.edu/projects/iloc},
 }
 
+@Misc{iloc-github,
+  Title                    = {{iLoc source code}},
+  HowPublished             = {GitHub},
+  Url                      = {https://github.com/IstvanBondar/iLoc},
+}
+
 @Misc{ipgp,
 Title = {{IPGP}},
 url = {http://www.ipgp.fr}
