--- a/doc/base/references.bib
+++ b/doc/base/references.bib
@@ -2265,6 +2265,12 @@ url = {http://www.ipgp.fr}
   Url                      = {https://docs.gempa.de/caps/current/apps/sproc2caps.html#sproc2caps},
 }
 
+@Misc{stdloc,
+  Title                    = {{StdLoc}},
+  HowPublished             = {SeisComP locator},
+  Url                      = {https://docs.gempa.de/seiscomp/current/apps/global_stdloc.html},
+}
+
 @Misc{stompy,
   Title                    = {{Stompy}},
   HowPublished             = {Python module},
